--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
     return height / 2 * 3 - 1.337 * wizardWidth;
   }
 </script>
+<script src="js/jsstat.js"></script>
 <script src="js/game.js"></script>
 
 </body>
